pipoc unstyled done & first build

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,2 +1,7 @@
+<div style="border-style: solid; boder-width: 1%"></div>
+<p style="text-align: center;">
+    Want to add something here? <br>
+    Let @Pongo | <code>awtterpaws_26</code> know on Discord!
+</p>
     </body>
 </html>
