worked on social transition & set meta data

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
     <head>
-        <title>My First Web Page</title>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg" href="./img/favicon.svg" />
+        <title>Worldwide Trans Resources</title>
     </head>
     <body>
