--- a/templates/footer.html
+++ b/templates/footer.html
@@ -8,10 +8,10 @@
 </p>
 <p style="text-align: center;">
     Disclaimer: <br>
-    This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts.
-    Any products/companies we list don't reflect Trans Academy as a whole. 
+    This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts. 
+    Any products/companies are just suggestions, use discretion. 
     Please use your own discretion and research with any advice listed. 
-    Always seek the advice of your qualified health care provider regarding any medical questions. 
+    Always seek the advice of your qualified health care provider regarding any medical questions.
 </p>
     </body>
 </html>
