--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,10 @@
-<div style="border-style: solid; boder-width: 1%"></div
+<div style="border-style: solid; boder-width: 1%"></div>
 
 <p style="text-align: center;">
     Want to add something here? <br>
     Let @Pongo | <code>worldwidelgbtresources@gmail.com</code> <br>
     Technical difficulties? <br>
-    Let @Add | <code>add_gaming</code> know on Discord!
+    Let @Add know on <a href="discordapp.com/users/245579273052749825">Discord</a> or <a href="https://x.com/AddGaming2">Twitter</a>!
 </p>
 <p style="text-align: center;">
     Disclaimer: <br>
