--- a/templates/header.html
+++ b/templates/header.html
@@ -5,8 +5,16 @@
         <link rel="icon" type="image/svg" href="./img/favicon.svg" />
         <title>Worldwide LGBT Resources</title>
 <style>
-.readable_div {
+.readable-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 90%;
+    margin: auto;
+}
+.readable-text {
     max-width: 120ch;
+    margin: auto;
 }
 .flexbox {
     display: flex;
@@ -14,6 +22,9 @@
 }
 .box2 {
     width: 50%;
+}
+.put-left {
+    padding-right: 50%;
 }
 @media (max-aspect-ratio: 1/1) {
     .flexbox {
@@ -24,6 +35,9 @@
         display: block;
         width: 80%;
         margin: auto;
+    }
+    .put-left {
+        padding-right: 0%;
     }
 }
 </style>
