swapped out separators to work with light/dark modes & updated index to reflect mental health sub chapters & downloaded external gifs

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<div style="border-style: solid; boder-width: 1%"></div>
+<div class="separator" style="height: 0.3em"></div>
 
 <div class="readable-div">
     <p style="text-align: center;">
