added html only sidebar for wide displays

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<div class="separator" style="height: 0.3em"></div>
+<div class="separator-foot"></div>
 
 <div class="readable-div">
     <p style="text-align: center;">
