finally matched homelessness section on index

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,5 +1,10 @@
 <div class="sidebar">
     <ul>
+        <a href="./index.html">
+            <li>
+                Index
+            </li>
+        </a>
         <a href="./mental_health.html">
             <li>
                 Mental Health
