tried some new look for the sidebar

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,8 +1,8 @@
 <div class="sidebar">
     <ul>
         <a href="./index.html">
-            <li>
-                Index
+            <li style="border-top-style: solid">
+                Home
             </li>
         </a>
         <a href="./mental_health.html">
