new politics page

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -40,6 +40,11 @@
                 Legal Help for LGBT
             </li>
         </a> 
+        <a href="./politics.html">
+            <li>
+                Politics and LGBT savety
+            </li>
+        </a> 
         <a href="./general_lgbt_organizations.html">
             <li>
                 General LGBT organizations
