--- a/templates/header.html
+++ b/templates/header.html
@@ -68,6 +68,7 @@
         .link-img {
             height: 1.2rem;
             margin: 0em 0.3em;
+            padding: 0em 0em;
             cursor: pointer;
         }
         .link-img-p {
